1. Размеры окна сохраняются через properties 2. В свойства проекта добавлена сборка артефакта 3. Добавлен логотип формы